--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,9 @@
 
 .app {
   text-align: center;
-  background-color: #61dafb;
-  height: 100vh;
-  width: 100vw;
+  /* background-color: #61dafb; */
+  /* height: 100vh; */
+  /* width: 100vw; */
 }
 
 canvas { background:#fff}
