--- a/src/assets/style/_helpers.scss
+++ b/src/assets/style/_helpers.scss
@@ -1,67 +1,90 @@
-
 /* helpers */
 
 .flex {
-    display: flex;
+  display: flex;
 }
 .align-center {
-    align-items: center;
+  align-items: center;
 }
 .justify-center {
-    justify-content: center;
+  justify-content: center;
 }
 .space-around {
-    justify-content: space-around;
+  justify-content: space-around;
 }
 .space-between {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 .column {
-    flex-direction: column;
+  flex-direction: column;
 }
 .wrap {
-    flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 .flex-start {
-    align-items: flex-start;
+  align-items: flex-start;
 }
 .flex-end {
-    align-items: flex-end;
+  align-items: flex-end;
 }
 .justify-end {
-    justify-content: flex-end;
+  justify-content: flex-end;
 }
 
-
-
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .clean-list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
-
 .width-all {
-    width: 100%;
+  width: 100%;
 }
 
 .height-all {
-    height: 100%;
+  height: 100%;
 }
 
 .width-content {
-    width: fit-content;
+  width: fit-content;
 }
 
 .column-layout {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.column-layout >*:not(:last-child) {
-    margin-bottom: 10px;
+.column-layout > *:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.main-btn {
+  background-image: url('https://images.all-free-download.com/images/graphiclarge/wood_background_hd_picture_5_169810.jpg');
+  padding: 10px;
+  color: black;
+  font-size: 1.5em;
+  font-weight: 600;
+  box-shadow: 0 0 4px 1px grey;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.main-layout {
+  background-image: url('https://i.ytimg.com/vi/B_G5yMC9sKg/maxresdefault.jpg');
+  height: 100vh;
+  padding: 20px;
+  position: relative;
+}
+
+.header {
+  position: relative;
+  top: 10%;
+  font-size: 2em;
+  font-weight: 900;
 }
