--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -3,6 +3,9 @@
 @import "./base";
 @import "./layout";
 @import "./pages/welcome";
+@import "./pages/playing";
+@import "./pages/choose-word";
+@import "./pages/wait";
 
 
 pre {
