title and favicon

--- a/src/assets/style/_helpers.scss
+++ b/src/assets/style/_helpers.scss
@@ -1,7 +1,7 @@
 /* helpers */
 
 .main-btn {
-  background-image: url('https://images.all-free-download.com/images/graphiclarge/wood_background_hd_picture_5_169810.jpg');
+  background-image: url('../imgs/mainBtn.jpg');
   padding: 10px;
   color: black;
   font-size: 1.5em;
@@ -10,7 +10,7 @@
 }
 
 .main-layout {
-  background-image: url('https://i.ytimg.com/vi/B_G5yMC9sKg/maxresdefault.jpg');
+  background-image: url('../imgs/appBackground.jpg');
   height: 100vh;
   padding: 20px;
   position: relative;
